unpackaged/main/default/objects/Opportunity/fields/Evolution_RYF__c.field-meta.xml
<CustomField>
    <fullName>Evolution_RYF__c</fullName>
    <description>Champ service tarification</description>
    <label>Evolution RYF (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>