unpackaged/main/default/objects/Opportunity/fields/Filiale_Groupement__c.field-meta.xml
<CustomField>
    <fullName>Filiale_Groupement__c</fullName>
    <label>Filiale / Groupement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>