unpackaged/main/default/objects/Opportunity/fields/Flow_Type_de_produit_B2B__c.field-meta.xml
<CustomField>
    <fullName>Flow_Type_de_produit_B2B__c</fullName>
    <label>Flow Type de produit B2B</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_de_produit_B2B</valueSetName>
    </valueSet>
</CustomField>