unpackaged/main/default/objects/Opportunity/fields/Flow_Type_produit__c.field-meta.xml
<CustomField>
    <fullName>Flow_Type_produit__c</fullName>
    <label>Flow_Type de produit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Véhicules Frigorifique</fullName>
            </value>
            <value>
                <fullName>Véhicules Sec</fullName>
            </value>
            <value>
                <fullName>Meuble</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>