unpackaged/main/default/objects/Opportunity/fields/Flow_type_produit_B2C__c.field-meta.xml
<CustomField>
    <fullName>Flow_type_produit_B2C__c</fullName>
    <label>Flow Type de Produit B2C</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Véhicules Frigorifiques</fullName>
            </value>
            <value>
                <fullName>Véhicules Secs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>