unpackaged/main/default/objects/Opportunity/fields/Fonction__c.field-meta.xml
<CustomField>
    <fullName>Fonction__c</fullName>
    <formula>text(Owner.Fonction__c)</formula>
    <label>Fonction</label>
    <type>Text</type>
</CustomField>