unpackaged/main/default/objects/Opportunity/fields/Frais_PLV__c.field-meta.xml
<CustomField>
    <fullName>Frais_PLV__c</fullName>
    <label>Frais Publicité</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>