unpackaged/main/default/objects/Opportunity/fields/Frais_Transport__c.field-meta.xml
<CustomField>
    <fullName>Frais_Transport__c</fullName>
    <label>Frais Transport</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>