unpackaged/main/default/objects/Opportunity/fields/GroupeDerogation__c.field-meta.xml
<CustomField>
    <fullName>GroupeDerogation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Groupe de dérogation</label>
    <referenceTo>GroupeDerogation__c</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunites</relationshipName>
    <type>Lookup</type>
</CustomField>