unpackaged/main/default/objects/Opportunity/fields/Identifiant_national__c.field-meta.xml
<CustomField>
    <fullName>Identifiant_national__c</fullName>
    <formula>Account.IdentifiantNational__c</formula>
    <label>Identifiant national</label>
    <type>Text</type>
</CustomField>