unpackaged/main/default/objects/Opportunity/fields/Initiateur_DNP__c.field-meta.xml
<CustomField>
    <fullName>Initiateur_DNP__c</fullName>
    <description>Ce champ sert à sauvegarder le mail de l&#39;utilisateur initiateur de la demande DNP,exploitable dans le processus d&#39;approbation DNP (Envoi de notification d&#39;approbation/Rejet)</description>
    <label>Initiateur DNP</label>
    <type>Email</type>
</CustomField>