unpackaged/main/default/objects/Opportunity/fields/Is_CD_CDM__c.field-meta.xml
<CustomField>
    <fullName>Is_CD_CDM__c</fullName>
    <formula>IF(  
   OR(
     ISPICKVAL(Type_Location__c, &#39;Courte Durée&#39;) ,
     ISPICKVAL(Type_Location__c, &#39;Moyenne Durée&#39;) ,
     ISPICKVAL(TypeContrat__c, &#39;CD&#39;) ,
     ISPICKVAL(TypeContrat__c, &#39;CDM&#39;) 
       
     ) , 
   True, 
   False
   )</formula>
    <label>Is_CD_CDM</label>
    <type>Checkbox</type>
</CustomField>