unpackaged/main/default/objects/Opportunity/fields/Is_LD__c.field-meta.xml
<CustomField>
    <fullName>Is_LD__c</fullName>
    <formula>IF(  
   OR(
      ISPICKVAL(Type_Location__c, &#39;Longue Durée&#39;) ,
      ISPICKVAL(TypeContrat__c, &#39;LD&#39;)  
     ) , 
   True, 
   False
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_LD</label>
    <type>Checkbox</type>
</CustomField>