unpackaged/main/default/objects/Opportunity/fields/LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>LegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entité Légale</label>
    <referenceTo>LegalEntity__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>