unpackaged/main/default/objects/Opportunity/fields/LegalEntityCode__c.field-meta.xml
<CustomField>
    <fullName>LegalEntityCode__c</fullName>
    <formula>SalesAreaData__r.LegalEntityName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Entité Légale</label>
    <type>Text</type>
</CustomField>