unpackaged/main/default/objects/Opportunity/fields/LegalEntityName__c.field-meta.xml
<CustomField>
    <fullName>LegalEntityName__c</fullName>
    <formula>SalesAreaData__r.LegalEntityName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom Entité Légale</label>
    <type>Text</type>
</CustomField>