unpackaged/main/default/objects/Opportunity/fields/Liste_nom_operation__c.field-meta.xml
<CustomField>
    <fullName>Liste_nom_operation__c</fullName>
    <description>Sélection de l&#39;opération commerciale ayant permis de générer l&#39;Opportunité</description>
    <inlineHelpText>Sélectionner de l&#39;opération commerciale ayant permis de générer l&#39;Opportunité</inlineHelpText>
    <label>Nom de l&#39;opération</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>100% Client PF</fullName>
            </value>
            <value>
                <fullName>100% FRAIKIN</fullName>
            </value>
            <value>
                <fullName>ANUGA 2021 - Cologne</fullName>
            </value>
            <value>
                <fullName>BDD ALIMARKET</fullName>
                <label>BDD Alimarket</label>
            </value>
            <value>
                <fullName>FEDEREC</fullName>
            </value>
            <value>
                <fullName>FFF</fullName>
            </value>
            <value>
                <fullName>Fichier AAA</fullName>
            </value>
            <value>
                <fullName>FRIGORENT CUSTOMER</fullName>
            </value>
            <value>
                <fullName>GROSSMARKT HAMBURG</fullName>
            </value>
            <value>
                <fullName>INTEREST FOR CONTAINERS/COLSTORE</fullName>
            </value>
            <value>
                <fullName>ORESTO</fullName>
            </value>
            <value>
                <fullName>PIBELUX Comptes N&#39;ICE</fullName>
            </value>
            <value>
                <fullName>PICH Zürich Engrosmarkt</fullName>
            </value>
            <value>
                <fullName>RESTART AFTER COVID-19</fullName>
            </value>
            <value>
                <fullName>SEMI-MARATHON</fullName>
            </value>
            <value>
                <fullName>Serbotel 2021</fullName>
            </value>
            <value>
                <fullName>Sirha 2023</fullName>
            </value>
            <value>
                <fullName>SNIPER</fullName>
            </value>
            <value>
                <fullName>VOLTA TRUCKS CANDIDATE</fullName>
            </value>
            <value>
                <fullName>ZEFIRENT BELUX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>