unpackaged/main/default/objects/Opportunity/fields/LogoBrand__c.field-meta.xml
<CustomField>
    <fullName>LogoBrand__c</fullName>
    <formula>SalesAreaData__r.LogoBrand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo Marque</label>
    <type>Text</type>
</CustomField>