unpackaged/main/default/objects/Opportunity/fields/LogoBusinessLine__c.field-meta.xml
<CustomField>
    <fullName>LogoBusinessLine__c</fullName>
    <formula>SalesAreaData__r.LogoBusinessLine__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo Ligne de produit</label>
    <type>Text</type>
</CustomField>