unpackaged/main/default/objects/Opportunity/fields/LoueurActuel__c.field-meta.xml
<CustomField>
    <fullName>LoueurActuel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Pour type d&#39;activité &quot;Location&quot;</inlineHelpText>
    <label>Loueur actuel</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Veuillez choisir un compte de type &quot;Concurrent&quot;.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Compte Concurrent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunités (Loueur Actuel)</relationshipLabel>
    <relationshipName>OpportunitesLoueur</relationshipName>
    <type>Lookup</type>
</CustomField>