unpackaged/main/default/objects/Opportunity/fields/Loyer_Derogation__c.field-meta.xml
<CustomField>
    <fullName>Loyer_Derogation__c</fullName>
    <label>Loyer Dérogation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>