unpackaged/main/default/objects/Opportunity/fields/Loyer_Devis__c.field-meta.xml
<CustomField>
    <fullName>Loyer_Devis__c</fullName>
    <label>Loyer Devis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>