unpackaged/main/default/objects/Opportunity/fields/Loyer_Final__c.field-meta.xml
<CustomField>
    <fullName>Loyer_Final__c</fullName>
    <label>Loyer Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>