unpackaged/main/default/objects/Opportunity/fields/MAD_24_mois__c.field-meta.xml
<CustomField>
    <fullName>MAD_24_mois__c</fullName>
    <label>MAD 24 mois</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>