unpackaged/main/default/objects/Opportunity/fields/Maquette_120__c.field-meta.xml
<CustomField>
    <fullName>Maquette_120__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Maquette 1/20</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>