unpackaged/main/default/objects/Opportunity/fields/Marge_theorique_loyer_client_globale__c.field-meta.xml
<CustomField>
    <fullName>Marge_theorique_loyer_client_globale__c</fullName>
    <description>GFC-2913</description>
    <formula>Somme_Marge_Montant_de_location__c / Somme_des_montant_total_de_la_location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marge théorique loyer client globale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>