unpackaged/main/default/objects/Opportunity/fields/Marque_SAD__c.field-meta.xml
<CustomField>
    <fullName>Marque_SAD__c</fullName>
    <formula>TEXT(SalesAreaData__r.SalesArea__r.Brand__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marque_SAD</label>
    <type>Text</type>
</CustomField>