unpackaged/main/default/objects/Opportunity/fields/Montant_total_assurances__c.field-meta.xml
<CustomField>
    <fullName>Montant_total_assurances__c</fullName>
    <label>Montant total assurance affinitaire</label>
    <summarizedField>Quote.Montant_total_assurances__c</summarizedField>
    <summaryFilterItems>
        <field>Quote.Synchronise__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>