unpackaged/main/default/objects/Opportunity/fields/Month_effective_closing_date__c.field-meta.xml
<CustomField>
    <fullName>Month_effective_closing_date__c</fullName>
    <formula>MONTH ( DateClotureEffective__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month (effective closing date)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>