unpackaged/main/default/objects/Opportunity/fields/Month_End_of_contract__c.field-meta.xml
<CustomField>
    <fullName>Month_End_of_contract__c</fullName>
    <formula>MONTH ( Date_of_end_of_contract__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month (End of contract)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>