unpackaged/main/default/objects/Opportunity/fields/Motif_de_refus__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_refus__c</fullName>
    <label>Motif de refus</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>