unpackaged/main/default/objects/Opportunity/fields/Motifderefus_devisprincipal__c.field-meta.xml
<CustomField>
    <fullName>Motifderefus_devisprincipal__c</fullName>
    <formula>TEXT(PrimaryQuote__r.Motif_de_refus__c)</formula>
    <label>Motif de refus</label>
    <type>Text</type>
</CustomField>