unpackaged/main/default/objects/Opportunity/fields/MotifEchecPrincipal__c.field-meta.xml
<CustomField>
    <fullName>MotifEchecPrincipal__c</fullName>
    <label>Motif d&#39;échec principal</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Délai de production</fullName>
            </value>
            <value>
                <fullName>Distance géographique</fullName>
            </value>
            <value>
                <fullName>Etat d&#39;esprit</fullName>
            </value>
            <value>
                <fullName>Prix</fullName>
            </value>
            <value>
                <fullName>Produit</fullName>
            </value>
            <value>
                <fullName>Relation</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Technique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>