unpackaged/main/default/objects/Opportunity/fields/N_Client__c.field-meta.xml
<CustomField>
    <fullName>N_Client__c</fullName>
    <description>Numéro client Compte</description>
    <label>N° Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>