unpackaged/main/default/objects/Opportunity/fields/N_client_meuble__c.field-meta.xml
<CustomField>
    <fullName>N_client_meuble__c</fullName>
    <formula>Account.N_client_meuble__c</formula>
    <label>N° client meuble</label>
    <type>Text</type>
</CustomField>