unpackaged/main/default/objects/Opportunity/fields/N_Contrat__c.field-meta.xml
<CustomField>
    <fullName>N_Contrat__c</fullName>
    <label>N° Contrat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>