unpackaged/main/default/objects/Opportunity/fields/N_de_la_proposition_commerciale__c.field-meta.xml
<CustomField>
    <fullName>N_de_la_proposition_commerciale__c</fullName>
    <label>N° de la proposition commerciale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>