unpackaged/main/default/objects/Opportunity/fields/N_Parc__c.field-meta.xml
<CustomField>
    <fullName>N_Parc__c</fullName>
    <defaultValue>&#39;.....&#39;</defaultValue>
    <description>Numéro(s) de parc</description>
    <label>N° Parc</label>
    <type>TextArea</type>
</CustomField>