unpackaged/main/default/objects/Opportunity/fields/N_Parc_pressenti__c.field-meta.xml
<CustomField>
    <fullName>N_Parc_pressenti__c</fullName>
    <label>N° Parc pressenti</label>
    <length>255</length>
    <type>Text</type>
</CustomField>