unpackaged/main/default/objects/Opportunity/fields/N_Parc_renouvele__c.field-meta.xml
<CustomField>
    <fullName>N_Parc_renouvele__c</fullName>
    <defaultValue>&#39;.......&#39;</defaultValue>
    <label>N° Parc renouvelé</label>
    <length>255</length>
    <type>Text</type>
</CustomField>