unpackaged/main/default/objects/Opportunity/fields/N_Parc_s_attribu_s__c.field-meta.xml
<CustomField>
    <fullName>N_Parc_s_attribu_s__c</fullName>
    <defaultValue>&#39;.......&#39;</defaultValue>
    <label>N° Parc(s) attribué(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>