unpackaged/main/default/objects/Opportunity/fields/Nb_BP_Livre__c.field-meta.xml
<CustomField>
    <fullName>Nb_BP_Livre__c</fullName>
    <label>Nb_BP_Livre</label>
    <summaryFilterItems>
        <field>InvolvedStakeholder__c.Role__c</field>
        <operation>equals</operation>
        <value>Livré</value>
    </summaryFilterItems>
    <summaryForeignKey>InvolvedStakeholder__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>