unpackaged/main/default/objects/Opportunity/fields/NB_BP_non_conforme__c.field-meta.xml
<CustomField>
    <fullName>NB_BP_non_conforme__c</fullName>
    <label>NB BP non conforme</label>
    <summaryFilterItems>
        <field>InvolvedStakeholder__c.BP_Conforme_checkbox__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>InvolvedStakeholder__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>