unpackaged/main/default/objects/Opportunity/fields/Nb_Concurrents__c.field-meta.xml
<CustomField>
    <fullName>Nb_Concurrents__c</fullName>
    <label>Nb Concurrents</label>
    <summaryFilterItems>
        <field>ActeurOpportunite__c.Role__c</field>
        <operation>equals</operation>
        <value>Concurrent</value>
    </summaryFilterItems>
    <summaryForeignKey>ActeurOpportunite__c.Opportunite__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>