unpackaged/main/default/objects/Opportunity/fields/NB_Contact_DonneurDordre__c.field-meta.xml
<CustomField>
    <fullName>NB_Contact_DonneurDordre__c</fullName>
    <label>NB_Contact_DonneurDordre</label>
    <summaryFilterItems>
        <field>RoleContact__c.Role__c</field>
        <operation>equals</operation>
        <value>Donneur d&#39;ordre</value>
    </summaryFilterItems>
    <summaryForeignKey>RoleContact__c.Opportunite__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>