unpackaged/main/default/objects/Opportunity/fields/NB_Parcs_confirmes__c.field-meta.xml
<CustomField>
    <fullName>NB_Parcs_confirmes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NB Parcs confirmés</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>