unpackaged/main/default/objects/Opportunity/fields/Nb_vehicles_Nb_months__c.field-meta.xml
<CustomField>
    <fullName>Nb_vehicles_Nb_months__c</fullName>
    <formula>DureeContrat__c* Quantite__c</formula>
    <label>Nb vehicles * Nb months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>