unpackaged/main/default/objects/Opportunity/fields/NbDevisSynchronis_s__c.field-meta.xml
<CustomField>
    <fullName>NbDevisSynchronis_s__c</fullName>
    <description>Calcule le nombre de devis synchronisés</description>
    <label>NbDevisSynchronisés</label>
    <summaryFilterItems>
        <field>Quote.Synchronise__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>