unpackaged/main/default/objects/Opportunity/fields/Nom_Compte_generique__c.field-meta.xml
<CustomField>
    <fullName>Nom_Compte_generique__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom du Compte générique</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunités (Nom du Compte générique)</relationshipLabel>
    <relationshipName>Opportunites_Compte_Gen</relationshipName>
    <type>Lookup</type>
</CustomField>