unpackaged/main/default/objects/Opportunity/fields/Nom_utilisateur_Derniere_modification__c.field-meta.xml
<CustomField>
    <fullName>Nom_utilisateur_Derniere_modification__c</fullName>
    <formula>LastModifiedBy.LastName &amp; &#39; &#39; &amp; LastModifiedBy.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom d&#39;utilisateur Dernière modification</label>
    <type>Text</type>
</CustomField>