unpackaged/main/default/objects/Opportunity/fields/Nombre_de_jours_derniere_activite__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_jours_derniere_activite__c</fullName>
    <formula>IF(ISNULL(LastActivityDate),0,TODAY() - LastActivityDate)</formula>
    <label>Nombre de jours dernière activité</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>