unpackaged/main/default/objects/Opportunity/fields/Nombre_de_mois_de_caution__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_mois_de_caution__c</fullName>
    <defaultValue>IF($RecordType.DeveloperName  = &#39;Opportunite_Meuble&#39;,0 , 3)</defaultValue>
    <label>Nombre de mois de caution</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>