unpackaged/main/default/objects/Opportunity/fields/Nouvel_agrement_accord__c.field-meta.xml
<CustomField>
    <fullName>Nouvel_agrement_accord__c</fullName>
    <label>Nouvel agrément accordé</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>