unpackaged/main/default/objects/Opportunity/fields/NumeroOpportunite__c.field-meta.xml
<CustomField>
    <fullName>NumeroOpportunite__c</fullName>
    <displayFormat>GF-OPP-{0000000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Numéro du système, incrémenté automatiquement</inlineHelpText>
    <label>Numéro de l&#39;opportunité</label>
    <type>AutoNumber</type>
</CustomField>