unpackaged/main/default/objects/Opportunity/fields/Opp_has_Dero__c.field-meta.xml
<CustomField>
    <fullName>Opp_has_Dero__c</fullName>
    <formula>if( Nb_DERO__c &gt;0,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp has Dero</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>