unpackaged/main/default/objects/Opportunity/fields/Opp_life_time__c.field-meta.xml
<CustomField>
    <fullName>Opp_life_time__c</fullName>
    <formula>DateClotureEffective__c - DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp life time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>