unpackaged/main/default/objects/Opportunity/fields/Opportunite_Grand_Compte__c.field-meta.xml
<CustomField>
    <fullName>Opportunite_Grand_Compte__c</fullName>
    <formula>if ( OR(Account.Grand_Compte__c = true, Account.Est_un_grand_compte__c = true),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunité Grand Compte</label>
    <type>Checkbox</type>
</CustomField>