unpackaged/main/default/objects/Opportunity/fields/Opportunite_transfrontaliere__c.field-meta.xml
<CustomField>
    <fullName>Opportunite_transfrontaliere__c</fullName>
    <description>GFC-2921</description>
    <formula>SalesAreaData__r.SAD_etrangere__c</formula>
    <label>Opportunité transfrontalière</label>
    <type>Checkbox</type>
</CustomField>