unpackaged/main/default/objects/Opportunity/fields/OpportunitesLDEncours__c.field-meta.xml
<CustomField>
    <fullName>OpportunitesLDEncours__c</fullName>
    <formula>SalesAreaData__r.NbOppLDEnCours__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunités LD en cours</label>
    <type>Checkbox</type>
</CustomField>