unpackaged/main/default/objects/Opportunity/fields/OrdersIn__c.field-meta.xml
<CustomField>
    <fullName>OrdersIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OrdersIn</label>
    <type>Checkbox</type>
</CustomField>