unpackaged/main/default/objects/Opportunity/fields/Parc__c.field-meta.xml
<CustomField>
    <fullName>Parc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parc</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Equipement</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunit_s</relationshipName>
    <type>Lookup</type>
</CustomField>