unpackaged/main/default/objects/Opportunity/fields/PAT__c.field-meta.xml
<CustomField>
    <fullName>PAT__c</fullName>
    <label>PAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>